--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+server.port = 6666
 
+
+# Database connection settings
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inbound
+spring.datasource.username=sa
+spring.datasource.password=Addverb@9871!
+
+# MSSQL driver class name
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Keep the database connection alive if idle for a long time (preventing communications failure)
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database schema will be automatically updated accordingly to java entities found in the project
+spring.jpa.hibernate.ddl-auto=update
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
