--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 6666
 
 
 # Database connection settings
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inbound
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inbound;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=Addverb@9871!
 
